[project]
name = "nonebot-plugin-cave"
version = "2.0.0"
description = "A plugin to "
authors = [{ name = "hmzz804", email = "hmzz21669@gmail.com" }, { name = "XieXiLin", email = "support@xiexilin.com" }]
dependencies = [
    "nonebot2>=2.0.0",
    "pydantic>=1.10.4,<2",
    "nonebot-plugin-send-anything-anywhere>=0.3.2",
]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/hmzz804/nonebot_plugin_cave"

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
